--- a/Lab2/Lab2_grzaslewicz.Rest/appsettings.json
+++ b/Lab2/Lab2_grzaslewicz.Rest/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AzureDb": "Server=tcp:iot-jakubgrzaslewicz.database.windows.net,1433;Initial Catalog=iot_jakubgrzaslewicz_lab1_db;Persist Security Info=False;User ID=jake;Password=hQEg2APLTmpGr1GB;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  } 
 }
